WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210106
[GTK][WPE] WTR: fix handling of WebsiteDataStore
https://bugs.webkit.org/show_bug.cgi?id=210106
Summary
[GTK][WPE] WTR: fix handling of WebsiteDataStore
Carlos Garcia Campos
Reported
2020-04-07 05:33:19 PDT
The TestController::defaultWebsiteDataStore() is created and used but never really assigned to the context. Since we are not assigning a WebsiteDataStore to the context, and we don't use the default WebsiteDataStore, when a new page is created, we end up creating the default one (with the default config, instead of the one created by WTR). We should set the TestController::defaultWebsiteDataStore() as the primary data store of the context like the GLib API does.
Attachments
Patch
(3.86 KB, patch)
2020-04-07 05:36 PDT
,
Carlos Garcia Campos
aperez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2020-04-07 05:36:01 PDT
Created
attachment 395672
[details]
Patch
Adrian Perez
Comment 2
2020-04-07 05:53:42 PDT
Comment on
attachment 395672
[details]
Patch Please make sure that tests pass before landing, otherwise LGTM.
Carlos Garcia Campos
Comment 3
2020-04-07 23:19:30 PDT
Committed
r259705
: <
https://trac.webkit.org/changeset/259705
>
Radar WebKit Bug Importer
Comment 4
2020-04-07 23:20:15 PDT
<
rdar://problem/61433923
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug